--- a/IDE/MainWindow.xaml
+++ b/IDE/MainWindow.xaml
@@ -9,8 +9,55 @@
     <!--.FocusedElement="{Binding ElementName=mnulexico}"
     -->
     <Grid>
+        
+        
+        
         <Grid.Resources>
-            <Style x:Key="options" TargetType="MenuItem">
+
+            <Style TargetType="{x:Type Thumb}"  x:Key="ScrollBarThumb">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Thumb}">
+                            <Border CornerRadius="2"
+                            Background="Black"
+                            BorderBrush="Red"
+                            BorderThickness="1" />
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style TargetType="ScrollBar" >
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type ScrollBar}">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition MaxHeight="18" />
+                                    <RowDefinition Height="0.00001*" />
+                                    <RowDefinition MaxHeight="18" />
+                                </Grid.RowDefinitions>
+                                <Border Grid.RowSpan="3" />
+                                <RepeatButton Grid.Row="0"
+                                      Command="ScrollBar.LineUpCommand"
+                                      Content="" />
+                                <Track x:Name="PART_Track" Grid.Row="1" IsDirectionReversed="true">
+                                    <Track.Thumb>
+                                        <Thumb Style="{StaticResource ScrollBarThumb}" Margin="1,0,1,0"/>
+                                    </Track.Thumb>
+                                </Track>
+                                <RepeatButton Grid.Row="3"
+                                      Command="ScrollBar.LineDownCommand"
+                                      Content="" />
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+                
+            </Style>
+
+
+            <Style x:Key="options" TargetType="MenuItem" >
                 <Style.Triggers>
                     <Trigger Property="IsFocused" Value="True">
                         <Setter Property="Background" Value="LightPink"/>
@@ -104,7 +151,9 @@
 
             </Grid.RowDefinitions>
 
-            <avalonedit:TextEditor Style="{StaticResource avalonstyles}" Background="#2E2E2E" x:Name="codigo" FontFamily="Consolas" FontSize="20pt" Grid.Column="0" ShowLineNumbers="True" Margin="0,0,0,0"/>
+            <avalonedit:TextEditor HorizontalScrollBarVisibility="Auto" Style="{StaticResource avalonstyles}" Background="#2E2E2E" x:Name="codigo" FontFamily="Consolas" FontSize="20pt" Grid.Column="0" ShowLineNumbers="True" Margin="0,0,0,0" >
+     
+            </avalonedit:TextEditor>
 
             <DockPanel Grid.Row="1" Grid.ColumnSpan="2" Background="Gray"  Margin="2,0,2,2"
                             >
