--- a/IDE/phases/Sintax.xaml
+++ b/IDE/phases/Sintax.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="Sintax" Height="450" Width="800">
     <Grid>
-        <TreeView x:Name="treeView" />
+        <TreeView x:Name="treeView" FontSize="20" FontFamily="Arial Black" Background="AliceBlue"/>
     </Grid>
 </Window>
