--- a/IDE/phases/TabHashView.xaml
+++ b/IDE/phases/TabHashView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="IDE.phases.LexicoView"
+﻿<Page x:Class="IDE.phases.TabHashView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,26 +6,28 @@
       xmlns:local="clr-namespace:IDE.phases"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="LexicoView">
+      Title="TabHashView">
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary 
                   Source="../Common/TabStyles.xaml">
                 </ResourceDictionary>
-                
+
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Page.Resources>
-
     <Grid>
         <DataGrid Style="{DynamicResource DataGridStyle1}" x:Name="dataGrid"
                   CanUserAddRows="False"
                   AutoGenerateColumns="False"
                   IsReadOnly="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Token" Binding="{Binding Token}" Width="*"/>
-                <DataGridTextColumn Header="Lexema" Binding="{Binding Lexema}" Width="*"/>
+                <DataGridTextColumn Header="Variable" Binding="{Binding name}" Width="*"/>
+                <DataGridTextColumn Header="Tipo" Binding="{Binding type}" Width="*"/>
+                <DataGridTextColumn Header="Valor" Binding="{Binding valor}" Width="*"/>
+                <DataGridTextColumn Header="Loc.Mem" Binding="{Binding meloc}" Width="*"/>
+                <DataGridTextColumn Header="No.Linea" Binding="{Binding lines}" Width="*"/>
 
 
 
