--- a/IDE/MainWindow.xaml
+++ b/IDE/MainWindow.xaml
@@ -177,7 +177,7 @@
             <DockPanel Grid.Row="2" Grid.ColumnSpan="3" Background="Gray"  Margin="2,2,2,2" >
                 <Menu DockPanel.Dock="Top" Name="downbar_menu">
                     <MenuItem x:Name="feedbackErr" Style="{StaticResource options}" Header="Errores" Click="feedbackErr_Click" />
-                    <MenuItem x:Name="feedbackRes" Style="{StaticResource options}" Header="Resultados"/>
+                    <MenuItem x:Name="feedbackRes" Style="{StaticResource options}" Header="Resultados" Click="feedbackRes_Click"/>
                     <MenuItem x:Name="feedbackTabHash" Style="{StaticResource options}" Header="Tabla Hash" Click="feedbackTabHash_Click"/>
                     <MenuItem  >
                         <MenuItem.Header>
